--- a/samples/qsmartgraphicsview/mainwindow.ui
+++ b/samples/qsmartgraphicsview/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>QSmartGraphicsView</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QSmartGraphicsView" name="graphicsView">
